Added placeholder stuff for my site

--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-Hello World
+<!doctype html>
+
+<html>
+    <head>
+        <title>Jamie Stinson - Web Developer</title>
+        <meta name="description" content="Jamie Stinson - Web Developer">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+        <style>
+            body {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                height: 100vh;
+                margin: 0;
+                background-image: linear-gradient(#223e66, #0d254b);
+            }
+
+            h1 {
+                color: #fff;
+                font-family: "Raleway", sans-serif;
+                font-size: 3rem;
+            }
+        </style>
+    </head>
+
+    <body>
+        <h1>Something new is coming soon...</h1>
+    </body>
+</html>
